Code cleanup, use virtual destructors to cleanup memory. Also rename all .h -> .hpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_deps = 525, 31, 64, 439, 19, 440, 1091
+lib_deps = 525, 31, 64, 439, 19, 1091
 
